@@ -1,4 +1,5 @@
 0.1601
+  added cache attribute
   select, insert, update, update_all, delete, delete_all, execute only receive hash argument(not backword compatible)
   
 0.1503
